--- a/requirements.txt
+++ b/requirements.txt
@@ -7,21 +7,26 @@ feedfinder2==0.0.4
 feedparser==5.2.1
 Flask==1.0.2
 Flask-Cors==3.0.7
+hammock
 idna==2.8
 itsdangerous==1.1.0
 jieba3k==0.35.1
 Jinja2==2.10
 lxml==4.3.2
 MarkupSafe==1.1.1
+marshmallow
 newspaper3k==0.2.8
 nltk==3.4
 oauthlib==3.0.1
-Pillow==5.4.1
+Pillow==6.2.2
+politifact
 python-dateutil==2.8.0
+pysqlite3
 PyYAML==5.1
 requests==2.21.0
 requests-file==1.4.3
 requests-oauthlib==1.2.0
+Scrapy
 singledispatch==3.4.0.3
 six==1.12.0
 soupsieve==1.8
