Interim checkin: trying to match Politifact with Twitter

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,18 +12,21 @@ idna==2.8
 itsdangerous==1.1.0
 jieba3k==0.35.1
 Jinja2==2.10
-lxml==4.3.2
+jsonlines
+lxml==4.6.3
 MarkupSafe==1.1.1
 marshmallow
 newspaper3k==0.2.8
-nltk==3.4
+nltk
 oauthlib==3.0.1
 Pillow==6.2.2
 politifact
 python-dateutil==2.8.0
 pysqlite3
+python-dotenv
+stanford-corenlp
 PyYAML==5.1
-requests==2.21.0
+requests==2.25.1
 requests-file==1.4.3
 requests-oauthlib==1.2.0
 Scrapy
@@ -33,6 +36,6 @@ soupsieve==1.8
 tinysegmenter==0.3
 tldextract==2.2.1
 tqdm==4.31.1
-twython==3.7.0
-urllib3==1.24.1
+twython==3.8.0
+urllib3==1.26.4
 Werkzeug==0.15.1
