--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ feedfinder2==0.0.4
 feedparser==5.2.1
 Flask==1.0.2
 Flask-Cors==3.0.7
+google-search-results
 hammock
 idna==2.8
 itsdangerous==1.1.0
