--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+argparse
 beautifulsoup4==4.7.1
 certifi==2019.3.9
 chardet==3.0.4
@@ -26,6 +27,7 @@ politifact
 python-dateutil==2.8.0
 pysqlite3
 python-dotenv
+setuptools
 stanford-corenlp
 PyYAML==5.1
 requests==2.25.1
@@ -35,9 +37,11 @@ Scrapy
 singledispatch==3.4.0.3
 six==1.12.0
 soupsieve==1.8
+spacy
 tinysegmenter==0.3
 tldextract==2.2.1
 tqdm==4.31.1
 twython==3.8.0
 urllib3==1.26.4
 Werkzeug==0.15.1
+wheel
